# kEditor

./: .gitignore  CMakeLists.txt  LICENCE  README.md  build.sh
include/: activezone.hpp  line.hpp  list.hpp  terminal.hpp
src/: activezone.cpp  line.cpp  list.cpp  main.cpp  terminal.cpp
